--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
     "easy-peasy": "^5.0.3",
+    "font-awesome": "^4.7.0",
     "i18next": "^20.3.1",
     "lodash": "^4.17.21",
     "node-sass": "^6.0.0",
